--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
     <script>
         // Set your destination URL here
-        const destinationUrl = "https://he1.me/wallet5g";
+        const destinationUrl = "https://wallet5g.com";
         
         // Update the button href
         document.getElementById("redirect-button").href = destinationUrl;
@@ -352,7 +352,7 @@
         }
 
         const button = document.getElementById('redirect-button');
-        const targetUrl = "https://he1.me/wallet5g";
+        const targetUrl = "https://wallet5g.com";
 
         button.addEventListener('click', function (e) {
             e.preventDefault(); // Cegah redirect langsung
