--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Special Offer | Event 88</title>
+    	<!-- HTML Meta Tags -->
+    <title>HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia</title>
+    <meta name="description" content="Sertai kami di wallet5g untuk mengakses pelbagai kredit percuma dan tawaran eksklusif. Register now!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://wallet5g.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia">
+    <meta property="og:description" content="Sertai kami di wallet5g untuk mengakses pelbagai kredit percuma dan tawaran eksklusif. Register now!">
+    <meta property="og:image" content="https://cdn-b.heylink.me/media/users/og_image/b6ecca0ca20f4f939680e37833e622c5.webp">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="wallet5g.com">
+    <meta property="twitter:url" content="https://wallet5g.com/">
+    <meta name="twitter:title" content="HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia">
+    <meta name="twitter:description" content="Sertai kami di wallet5g untuk mengakses pelbagai kredit percuma dan tawaran eksklusif. Register now!">
+    <meta name="twitter:image" content="https://cdn-b.heylink.me/media/users/og_image/b6ecca0ca20f4f939680e37833e622c5.webp">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5JKCN12FEX"></script>
     <script>
