--- a/index.html
+++ b/index.html
@@ -607,8 +607,6 @@
             <div class="card">
                 <img src="https://ant88bet.org/media/36e1c1d435d762ada5836.png" alt="Antbet Logo" class="brand-logo">
                 <div class="bonus">Welcome: <span class="value">120%</span></div>
-                <div class="bonus">2 Days: <span class="value">6%</span></div>
-                <div class="bonus">Daily: <span class="value">42%</span></div>
                 <div class="button-container">
                     <a href="https://ant88bet.org/RF212098901" class="claim-btn" target="_blank">Claim Sekarang</a>
                 </div>
@@ -616,8 +614,6 @@
             <div class="card">
                 <img src="https://ant88bet.org/media/4167c5e535d767d829fbd.png" alt="JTB Logo" class="brand-logo">
                 <div class="bonus">Welcome: <span class="value">50%</span></div>
-                <div class="bonus">3 Days: <span class="value">9%</span></div>
-                <div class="bonus">Daily: <span class="value">300%</span></div>
                 <div class="button-container">
                     <a href="https://jutaboy.org/RF212226631" class="claim-btn" target="_blank">Claim Sekarang</a>
                 </div>
@@ -625,8 +621,6 @@
             <div class="card">
                 <img src="https://ant88bet.org/media/f718423535d7614995fca.png" alt="Bossku Logo" class="brand-logo">
                 <div class="bonus">Welcome: <span class="value">100%</span></div>
-                <div class="bonus">2 Days: <span class="value">6%</span></div>
-                <div class="bonus">Daily: <span class="value">300%</span></div>
                 <div class="button-container">
                     <a href="https://bosskumy.pro/RF212225017" class="claim-btn" target="_blank">Claim Sekarang</a>
                 </div>
@@ -634,17 +628,13 @@
             <div class="card">
                 <img src="https://ant88bet.org/media/d7ffd26535d768b85c75f.png" alt="umibet Logo" class="brand-logo">
                 <div class="bonus">Welcome: <span class="value">100%</span></div>
-                <div class="bonus">2 Days: <span class="value">6%</span></div>
-                <div class="bonus">Daily: <span class="value">300%</span></div>
                 <div class="button-container">
                     <a href="https://umibet66.com/RF2122255A2" class="claim-btn" target="_blank">Claim Sekarang</a>
                 </div>
             </div>
             <div class="card">
                 <img src="https://res.cloudinary.com/de3lxw3jo/image/upload/v1747990891/FREE88_mtbeef.gif" alt="bw88 Logo" class="brand-logo">
-                <div class="bonus">Welcome: <span class="value">100%</span></div>
-                <div class="bonus">2 Days: <span class="value">6%</span></div>
-                <div class="bonus">Daily: <span class="value">300%</span></div>
+                <div class="bonus">Welcome: <span class="value">50%</span></div>
                 <div class="button-container">
                     <a href="https://t.ly/heybw88" class="claim-btn" target="_blank">Claim Sekarang</a>
                 </div>
@@ -678,7 +668,7 @@
         </div>
         
         <a href="#" class="cta-button pulse" id="redirect-button">
-            <i class="fas fa-trophy"></i> EVENT 88
+            <i class="fas fa-trophy"></i> 365days Special Free
         </a>
         
         <p class="notice">By clicking, you agree to our terms and conditions</p>
