--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <meta name="twitter:description" content="Sertai kami di wallet5g untuk mengakses pelbagai kredit percuma dan tawaran eksklusif. Register now!">
     <meta name="twitter:image" content="https://cdn-b.heylink.me/media/users/og_image/b6ecca0ca20f4f939680e37833e622c5.webp">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5JKCN12FEX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEED4HM67D"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-5JKCN12FEX');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-SEED4HM67D');
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
