--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         
         <div class="wrapper">
             <div class="card" data-brand="bw88">
-                <img src="https://res.cloudinary.com/dhlurazyu/image/upload/v1748429739/WALLET5G_izg3or.png" alt="bw88 Logo" class="brand-logo">
+                <img src="" alt="" class="">
                 <div class="bonus">Welcome: <span class="value">180%</span></div>
                 <div class="button-container">
                     <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Claim Sekarang</a>
