--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                 <img src="" alt="" class="">
                 <div class="bonus">Welcome: <span class="value">180%</span></div>
                 <div class="button-container">
-                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Claim Sekarang</a>
+                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Reward Now</a>
                 </div>
             </div>
         </div>
