--- a/index.html
+++ b/index.html
@@ -699,10 +699,10 @@
         
         <div class="wrapper">
             <div class="card" data-brand="bw88">
-                <img src="" alt="" class="">
+                <img src="https://res.cloudinary.com/dhlurazyu/image/upload/v1748429739/WALLET5G_izg3or.png" alt="bw88 Logo" class="brand-logo">
                 <div class="bonus">Welcome: <span class="value">180%</span></div>
                 <div class="button-container">
-                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Reward Now</a>
+                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Claim Sekarang</a>
                 </div>
             </div>
         </div>
