--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     
     <!-- HTML Meta Tags -->
     <title>HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia</title>
-    <meta name="description" content="Sertai kami di wallet5g untuk mengakses pelbagai kredit percuma dan tawaran eksklusif. Register now!">
+    <meta name="description" content="Sertai kami di wallet5g untuk mengakses pelbagai tawaran eksklusif.">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://wallet5g.com/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia">
-    <meta property="og:description" content="Sertai kami di wallet5g untuk mengakses pelbagai kredit percuma dan tawaran eksklusif. Register now!">
+    <meta property="og:title" content="HeyLink.me | top e-wallet Malaysia">
+    <meta property="og:description" content="Sertai kami di wallet5g untuk mengakses pelbagai tawaran eksklusif.">
     <meta property="og:image" content="https://cdn-b.heylink.me/media/users/og_image/b6ecca0ca20f4f939680e37833e622c5.webp">
 
     <!-- Twitter Meta Tags -->
@@ -21,7 +21,7 @@
     <meta property="twitter:domain" content="wallet5g.com">
     <meta property="twitter:url" content="https://wallet5g.com/">
     <meta name="twitter:title" content="HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia">
-    <meta name="twitter:description" content="Sertai kami di wallet5g untuk mengakses pelbagai kredit percuma dan tawaran eksklusif. Register now!">
+    <meta name="twitter:description" content="Sertai kami di wallet5g untuk mengakses pelbagai tawaran eksklusif">
     <meta name="twitter:image" content="https://cdn-b.heylink.me/media/users/og_image/b6ecca0ca20f4f939680e37833e622c5.webp">
 
     <!-- Google Tag Manager -->
@@ -699,7 +699,7 @@
         
         <div class="wrapper">
             <div class="card" data-brand="bw88">
-                <img src="https://res.cloudinary.com/dhlurazyu/image/upload/v1748429739/WALLET5G_izg3or.png" alt="bw88 Logo" class="brand-logo">
+                <img src="https://res.cloudinary.com/dhlurazyu/video/upload/v1749112093/BONUS_ICON_joxwwo.avi" alt="bw88 Logo" class="brand-logo">
                 <div class="bonus">Welcome: <span class="value">180%</span></div>
                 <div class="button-container">
                     <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Claim Sekarang</a>
