--- a/index.html
+++ b/index.html
@@ -699,7 +699,10 @@
         
         <div class="wrapper">
             <div class="card" data-brand="bw88">
-                <img src="https://res.cloudinary.com/dhlurazyu/video/upload/v1749112093/BONUS_ICON_joxwwo.avi" alt="bw88 Logo" class="brand-logo">
+                <video autoplay loop muted playsinline class="brand-logo" style="width: 100px; height: auto;">
+                  <source src="https://res.cloudinary.com/dhlurazyu/video/upload/v1749112093/BONUS_ICON_joxwwo.avi" type="video/avi">
+                  Your browser does not support the video tag.
+                </video>
                 <div class="bonus">Welcome: <span class="value">180%</span></div>
                 <div class="button-container">
                     <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Claim Sekarang</a>
