--- a/index.html
+++ b/index.html
@@ -578,16 +578,17 @@
             box-shadow: 0 8px 20px rgba(240, 115, 10, 0.3);
         }
 
-        .card .brand-logo {
-            max-width: 300px;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+        .brand-logo {
+          width: 100px;
+          height: auto;
+          margin-bottom: 1rem;
+          border-radius: 8px;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
         }
 
-        img, iframe {
+        video, iframe {
             display: block;
             border: 0;
         }
