--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             box-shadow: 0 8px 20px rgba(240, 115, 10, 0.3);
         }
 
-        .brand-logo {
+        .card .brand-logo {
           width: 100px;
           height: auto;
           margin-bottom: 1rem;
@@ -700,13 +700,10 @@
         
         <div class="wrapper">
             <div class="card" data-brand="bw88">
-                <video autoplay loop muted playsinline class="brand-logo" style="width: 100px; height: auto;">
-                  <source src="https://res.cloudinary.com/dhlurazyu/video/upload/v1749112093/BONUS_ICON_joxwwo.avi" type="video/avi">
-                  Your browser does not support the video tag.
-                </video>
-                <div class="bonus">Welcome: <span class="value">180%</span></div>
+                <img src="https://img1.picmix.com/output/stamp/normal/3/4/7/1/1131743_d12e9.gif" class="brand-logo" alt="Logo">
+                <div class="bonus"><span class="value">GET NOW</span></div>
                 <div class="button-container">
-                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Claim Sekarang</a>
+                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Click Here</a>
                 </div>
             </div>
         </div>
