--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <!-- End Google Tag Manager -->
 
     <!-- Enhanced Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEED4HM67D"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F81DTMCXTP"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         
         // Configure GA4 with enhanced settings
         gtag('js', new Date());
-        gtag('config', 'G-SEED4HM67D', {
+        gtag('config', 'G-F81DTMCXTP', {
             // Enhanced measurement settings
             enhanced_measurement: {
                 scrolls: true,
@@ -82,7 +82,7 @@
         });
 
         // Enhanced eCommerce setup for conversion tracking
-        gtag('config', 'G-SEED4HM67D', {
+        gtag('config', 'G-F81DTMCXTP', {
             currency: 'MYR',
             country: 'MY'
         });
@@ -896,7 +896,7 @@
 
                 // Enhanced conversion tracking
                 gtag('event', 'conversion', {
-                    send_to: 'G-SEED4HM67D',
+                    send_to: 'G-F81DTMCXTP',
                     ...eventData
                 });
 
