--- a/index.html
+++ b/index.html
@@ -713,9 +713,9 @@
         <div class="wrapper">
             <div class="card" data-brand="bw88">
                 <img src="https://img1.picmix.com/output/stamp/normal/3/4/7/1/1131743_d12e9.gif" class="brand-logo" alt="Logo">
-                <div class="bonus"><span class="value">GET NOW</span></div>
+                <div class="bonus"><span class="value"></span></div>
                 <div class="button-container">
-                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Click Here</a>
+                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Rewards</a>
                 </div>
             </div>
         </div>
@@ -753,12 +753,12 @@
         <p class="notice">By clicking, you agree to our terms and conditions</p>
     </div>
 
-    <div id="popupwindow" class="popup-window">
+    <!-- <div id="popupwindow" class="popup-window">
         <div id="main-notice" class="main-notice">
             <div class="ic-close" id="popup-close">&times;</div>
             <div class="notice-content" data-key="NoticeURL1"></div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Analytics Debug Panel -->
     <div id="analytics-debug" class="analytics-debug">
@@ -771,7 +771,7 @@
         const AnalyticsManager = {
             // Configuration
             config: {
-                destinationUrl: "https://he1.me/wallet5g",
+                destinationUrl: "https://linktr.ee/w5g",
                 sessionStart: Date.now(),
                 userId: null,
                 sessionId: null,
