--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Special Offer | Event 88 - Advanced Analytics</title>
+    <title>Special Offer | Event 88</title>
     
     <!-- HTML Meta Tags -->
-    <title>HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia</title>
-    <meta name="description" content="Sertai kami di wallet5g untuk mengakses pelbagai tawaran eksklusif.">
+    <title>play for fun</title>
+    <meta name="description" content="Sertai kami di wallet5g untuk mengakses pelbagai function.">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://wallet5g.com/">
@@ -20,8 +20,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="wallet5g.com">
     <meta property="twitter:url" content="https://wallet5g.com/">
-    <meta name="twitter:title" content="HeyLink.me | free credit deposit | free deposit bonus | top wallet Malaysia">
-    <meta name="twitter:description" content="Sertai kami di wallet5g untuk mengakses pelbagai tawaran eksklusif">
+    <meta name="twitter:title" content="play for fun">
+    <meta name="twitter:description" content="Sertai kami di wallet5g untuk mengakses pelbagai level eksklusif">
     <meta name="twitter:image" content="https://cdn-b.heylink.me/media/users/og_image/b6ecca0ca20f4f939680e37833e622c5.webp">
     <!-- TikTok Pixel Code Start -->
     <script>
