--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Sertai kami di wallet5g untuk mengakses pelbagai function.">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://wallet5g.com/">
+    <meta property="og:url" content="https://linktr.ee/w5g">
     <meta property="og:type" content="website">
     <meta property="og:title" content="HeyLink.me | top e-wallet Malaysia">
     <meta property="og:description" content="Sertai kami di wallet5g untuk mengakses pelbagai tawaran eksklusif.">
@@ -18,8 +18,8 @@
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="wallet5g.com">
-    <meta property="twitter:url" content="https://wallet5g.com/">
+    <meta property="twitter:domain" content="https://linktr.ee/w5g">
+    <meta property="twitter:url" content="https://linktr.ee/w5g">
     <meta name="twitter:title" content="play for fun">
     <meta name="twitter:description" content="Sertai kami di wallet5g untuk mengakses pelbagai level eksklusif">
     <meta name="twitter:image" content="https://cdn-b.heylink.me/media/users/og_image/b6ecca0ca20f4f939680e37833e622c5.webp">
@@ -715,7 +715,7 @@
                 <img src="https://img1.picmix.com/output/stamp/normal/3/4/7/1/1131743_d12e9.gif" class="brand-logo" alt="Logo">
                 <div class="bonus"><span class="value"></span></div>
                 <div class="button-container">
-                    <a href="https://wallet5g.com" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Rewards</a>
+                    <a href="https://linktr.ee/w5g" class="claim-btn" target="_blank" data-brand="bw88" data-bonus="100">Rewards</a>
                 </div>
             </div>
         </div>
